[gd_scene load_steps=5 format=3 uid="uid://d3ctw75snpbfo"]

[ext_resource type="Theme" uid="uid://bwqig88kcvpte" path="res://assets/GUI/gui_default_theme.tres" id="1_668ws"]
[ext_resource type="Script" path="res://scripts/graphics_menu.gd" id="1_fwlk8"]
[ext_resource type="Texture2D" uid="uid://b5t86x0g7yx8v" path="res://assets/GUI/GUI_Rect.png" id="2_03d7a"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4qvsx"]
texture = ExtResource("2_03d7a")
expand_margin_left = 70.0
expand_margin_top = 30.0
expand_margin_right = 70.0
expand_margin_bottom = 60.0

[node name="Graphics" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fwlk8")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(400, 400)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_4qvsx")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="Labels" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="Fullscreen" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/Labels"]
layout_mode = 2
theme = ExtResource("1_668ws")
text = "Display Mode"

[node name="Resolution" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/Labels"]
layout_mode = 2
theme = ExtResource("1_668ws")
text = "Resolution
"

[node name="VSync" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/Labels"]
layout_mode = 2
theme = ExtResource("1_668ws")
text = "VSync"

[node name="VSeparator" type="VSeparator" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="Checks" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="DisplayMode" type="OptionButton" parent="PanelContainer/MarginContainer/HBoxContainer/Checks"]
layout_mode = 2
theme = ExtResource("1_668ws")

[node name="Resolution" type="OptionButton" parent="PanelContainer/MarginContainer/HBoxContainer/Checks"]
layout_mode = 2
theme = ExtResource("1_668ws")

[node name="VSync" type="CheckBox" parent="PanelContainer/MarginContainer/HBoxContainer/Checks"]
layout_mode = 2
theme = ExtResource("1_668ws")

[node name="BackFromGraphics" type="Button" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme = ExtResource("1_668ws")
text = "Back"
metadata/_edit_use_anchors_ = true

[connection signal="toggled" from="PanelContainer/MarginContainer/HBoxContainer/Checks/VSync" to="." method="_on_v_sync_toggled"]
[connection signal="pressed" from="PanelContainer/BackFromGraphics" to="." method="_on_back_from_graphics_pressed"]
